Add fuzzing to matrix functions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ serde_bytes = { version = "0.11.14", default-features = false }
 serde_json = { version = "1.0.116", default-features = false }
 serde_with = { version = "=2.0.0", default-features = false }
 smallvec = "1.13.2"
+test-fuzz = "5.2.0"
 litep2p = { git = "https://github.com/paritytech/litep2p", branch = "master" }
 
 frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.10.0", default-features = false }
